import GameObject from "./character";

class Hero extends GameObject {
  constructor(text: string = "") {
    super(text);
  }
}

export default Hero;
